sort/filter/search added

--- a/ASP_HW_2/appsettings.Development.json
+++ b/ASP_HW_2/appsettings.Development.json
@@ -5,5 +5,10 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data source=(LocalDb)\\MSSQLLocalDB; Initial Catalog=BicycleShop; Integrated Security=True",
+    "IdentityConnection": "Data source=(LocalDb)\\MSSQLLocalDB; Initial Catalog=BicycleShop_Identity; Integrated Security=True"
   }
 }
